# hackarena

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run_tests.py  vcpkg.json
bot_binaries/: bfs_bot_v1  bfs_bot_v2  bfs_bot_v3  random_bot_v1
src/: handler.cpp  handler.h  handlers.h  main.cpp  packet.h  pch.h  processed-packets.h  thread-timer.cpp  thread-timer.h  web-socket-client.cpp  web-socket-client.h
src/agent/: agent.cpp  agent.h
src/bot/: bot.cpp  bot.h  utils.h
